[package]
name = "fasteval"
version = "0.1.8"
authors = ["Christopher Sebastian <csebastian3@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/likebike/fasteval"
documentation = "https://docs.rs/fasteval/"
description = """A fast algebraic expression evaluation library."""
keywords = ["eval", "evaluation", "math", "algebra", "calc", "calculate", "expression", "fast"]
categories = ["mathematics", "science", "parsing"]
edition = "2018"

[dependencies]

[profile.bench]
debug = true
lto = true

[features]
default = ["alpha-keywords"]
alpha-keywords = []  # Enable 'NaN', 'inf', 'and', 'or'
unsafe-vars = []     # tinyexpr-style pointer-based variables.

