[package]
name = "fasteval"
version = "0.1.9"
authors = ["Christopher Sebastian <csebastian3@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/likebike/fasteval"
documentation = "https://docs.rs/fasteval/"
description = """A fast algebraic expression evaluation library."""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]
edition = "2018"

[dependencies]

[profile.bench]
debug = true
lto = true

[features]
default = ["alpha-keywords"]
alpha-keywords = []  # Enable 'NaN', 'inf', 'and', 'or'
unsafe-vars = []     # tinyexpr-style pointer-based variables.

